--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "ejs": "^3.1.6",
     "env": "0.0.2",
     "express": "^4.17.1",
+    "express-throttle": "^2.0.0",
     "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
